--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -8,81 +8,69 @@
     tools:context=".LoginActivity">
 
     <TextView
-        android:layout_width="match_parent"
+        android:id="@+id/signIn"
+        android:layout_width="305dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="50dp"
+        android:layout_marginTop="50dp"
+        android:layout_marginEnd="50dp"
+        android:layout_marginBottom="50dp"
+        android:gravity="center"
         android:text="Sign In"
+        android:textAlignment="center"
         android:textColor="@color/white"
         android:textSize="35dp"
-        android:layout_margin="50dp"
-        android:gravity="center"
-        android:textStyle="bold"
-        android:textAlignment="center"
-        android:id="@+id/signIn"
-        />
+        android:textStyle="bold" />
 
     <EditText
-        android:id="@+id/username"
+        android:id="@+id/emailID"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/signIn"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="31dp"
         android:layout_marginEnd="10dp"
         android:layout_marginBottom="10dp"
         android:background="#30ffffff"
         android:drawableLeft="@drawable/ic_baseline_person_outline_24"
         android:drawablePadding="20dp"
-        android:hint="Username"
+        android:hint="Email-ID"
         android:padding="20dp"
         android:textColor="@color/white"
         android:textColorHint="@color/white" />
 
     <EditText
+        android:id="@+id/password"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/password"
-        android:layout_below="@id/username"
+        android:layout_alignParentBottom="true"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="404dp"
         android:background="#30ffffff"
-        android:hint="Password"
-        android:textColor="@color/white"
-        android:textColorHint="@color/white"
-        android:layout_margin="10dp"
-        android:padding="20dp"
         android:drawableLeft="@drawable/ic_baseline_info_24"
-        android:drawablePadding="20dp" />
+        android:drawablePadding="20dp"
+        android:hint="Password"
+        android:padding="20dp"
+        android:textColor="@color/white"
+        android:textColorHint="@color/white" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/login_btn"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/password"
-        android:layout_centerHorizontal="true"
-        android:layout_marginStart="20dp"
-        android:layout_marginTop="20dp"
-
-        android:layout_marginEnd="20dp"
-        android:layout_marginBottom="20dp"
-        android:backgroundTint="@color/teal_200"
-        android:text="LOGIN" />
-
-    <TextView
-        android:id="@+id/forgetpassword"
-        android:layout_width="154dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/login_btn"
+        android:layout_width="85dp"
+        android:layout_height="48dp"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="20dp"
 
-        android:layout_marginTop="64dp"
+        android:layout_marginStart="20dp"
         android:layout_marginEnd="20dp"
-        android:layout_marginBottom="215dp"
-        android:paddingTop="4dp"
-        android:text="Forget Password?"
+        android:layout_marginBottom="319dp"
+        android:backgroundTint="@color/teal_200"
+        android:paddingTop="10dp"
+        android:text="LOGIN"
         android:textAlignment="center"
-        android:textColor="@color/white"
-        android:textSize="16dp"
-        android:textStyle="bold" />
+        android:textAllCaps="true" />
 
     <TextView
         android:id="@+id/others"
@@ -133,14 +121,17 @@
     <Button
         android:id="@+id/signUp"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="38dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="158dp"
-        android:layout_marginBottom="284dp"
+        android:layout_marginEnd="162dp"
+        android:layout_marginBottom="243dp"
         android:background="#9EE6F1"
         android:backgroundTint="#10E3C7"
-        android:text="SignUp" />
+        android:text="SignUp"
+        android:textAlignment="center"
+        android:textAllCaps="true"
+        tools:ignore="TouchTargetSizeCheck" />
 
     <TextView
         android:id="@+id/or"
@@ -148,8 +139,8 @@
         android:layout_height="30dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="258dp"
-        android:layout_marginBottom="291dp"
+        android:layout_marginEnd="264dp"
+        android:layout_marginBottom="211dp"
         android:text="or"
         android:textAllCaps="true"
         android:textColor="#333131" />
