--- a/app/src/main/res/layout/activity_friend.xml
+++ b/app/src/main/res/layout/activity_friend.xml
@@ -8,93 +8,98 @@
     tools:context=".Friend_Activity"
     android:id="@+id/friend_Act">
 
-    <ImageView
+    <Button
         android:id="@+id/home_page"
-        android:layout_width="66dp"
-        android:layout_height="56dp"
+        android:layout_width="56dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="317dp"
-        android:layout_marginBottom="651dp"
-        app:srcCompat="@drawable/ic_baseline_home_24" />
+        android:layout_marginEnd="326dp"
+        android:layout_marginBottom="659dp"
+        android:background="@drawable/ic_baseline_home_24"
+        tools:ignore="SpeakableTextPresentCheck" />
+
+    <Button
+        android:id="@+id/restart_game"
+        android:layout_width="51dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="48dp"
+        android:layout_marginBottom="661dp"
+        android:background="@drawable/ic_baseline_change_circle_24"
+        tools:ignore="SpeakableTextPresentCheck" />
 
     <ImageView
-        android:id="@+id/restart_game"
-        android:layout_width="63dp"
-        android:layout_height="56dp"
+        android:id="@+id/playerChoice1"
+        android:layout_width="116dp"
+        android:layout_height="95dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="36dp"
-        android:layout_marginBottom="653dp"
-        app:srcCompat="@drawable/ic_baseline_change_circle_24" />
-
-    <TextView
-        android:id="@+id/player1"
-        android:layout_width="195dp"
-        android:layout_height="134dp"
-        android:layout_alignParentEnd="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginEnd="213dp"
-        android:layout_marginBottom="435dp"
+        android:layout_marginEnd="277dp"
+        android:layout_marginBottom="414dp"
         android:background="#FFFFFF"
         android:padding="5dp"
-        android:text="Player1"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textColor="#251E1E"
         android:textSize="16sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        tools:ignore="SpeakableTextPresentCheck" />
 
-    <TextView
-        android:id="@+id/player2"
-        android:layout_width="195dp"
-        android:layout_height="134dp"
+    <ImageView
+        android:id="@+id/playerChoice2"
+        android:layout_width="116dp"
+        android:layout_height="95dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="5dp"
-        android:layout_marginBottom="434dp"
+        android:layout_marginEnd="19dp"
+        android:layout_marginBottom="411dp"
         android:background="#FCFCFC"
-        android:text="Player2"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textColor="#191616"
         android:textSize="16sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        tools:ignore="SpeakableTextPresentCheck" />
 
-    <ImageView
+    <Button
         android:id="@+id/rock_select1"
-        android:layout_width="59dp"
-        android:layout_height="75dp"
+        android:layout_width="54dp"
+        android:layout_height="56dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="350dp"
-        android:layout_marginBottom="433dp"
+        android:layout_marginBottom="533dp"
+        android:background="@drawable/rock"
         android:clickable="true"
-        app:srcCompat="@drawable/rock"
+        android:focusable="true"
         tools:ignore="SpeakableTextPresentCheck,SpeakableTextPresentCheck" />
 
-    <ImageView
+    <Button
         android:id="@+id/paper_select1"
-        android:layout_width="61dp"
-        android:layout_height="72dp"
+        android:layout_width="56dp"
+        android:layout_height="57dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="286dp"
-        android:layout_marginBottom="435dp"
+        android:layout_marginEnd="290dp"
+        android:layout_marginBottom="531dp"
+        android:background="@drawable/p"
         android:clickable="true"
-        app:srcCompat="@drawable/p"
+        android:focusable="true"
         tools:ignore="SpeakableTextPresentCheck" />
 
-    <ImageView
+    <Button
         android:id="@+id/scissor_select1"
-        android:layout_width="63dp"
-        android:layout_height="83dp"
+        android:layout_width="55dp"
+        android:layout_height="57dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="217dp"
-        android:layout_marginBottom="420dp"
+        android:layout_marginEnd="231dp"
+        android:layout_marginBottom="531dp"
+        android:background="@drawable/csissors"
         android:clickable="true"
-        app:srcCompat="@drawable/csissors"
+        android:focusable="true"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <TextView
@@ -148,7 +153,7 @@
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/count1_res"
+        android:id="@+id/count1"
         android:layout_width="65dp"
         android:layout_height="35dp"
         android:layout_alignParentEnd="true"
@@ -179,55 +184,58 @@
         android:textStyle="bold" />
 
     <TextView
-        android:id="@+id/count2_res"
+        android:id="@+id/count2"
         android:layout_width="65dp"
         android:layout_height="35dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_marginEnd="9dp"
-        android:text="0"
         android:layout_marginBottom="359dp"
         android:background="#FFFFFF"
         android:padding="2dp"
+        android:text="0"
         android:textAlignment="center"
         android:textAllCaps="true"
         android:textColor="#1B1919"
         android:textStyle="bold" />
 
-    <ImageView
+    <Button
         android:id="@+id/rock_select2"
-        android:layout_width="59dp"
-        android:layout_height="75dp"
+        android:layout_width="55dp"
+        android:layout_height="58dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="137dp"
-        android:layout_marginBottom="434dp"
+        android:layout_marginEnd="123dp"
+        android:layout_marginBottom="528dp"
+        android:background="@drawable/rock"
         android:clickable="true"
-        app:srcCompat="@drawable/rock"
+        android:focusable="true"
         tools:ignore="SpeakableTextPresentCheck" />
 
-    <ImageView
+    <Button
         android:id="@+id/paper_select2"
-        android:layout_width="61dp"
-        android:layout_height="72dp"
+        android:layout_width="52dp"
+        android:layout_height="57dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="74dp"
-        android:layout_marginBottom="434dp"
+        android:layout_marginEnd="66dp"
+        android:layout_marginBottom="530dp"
+        android:background="@drawable/p"
         android:clickable="true"
-        app:srcCompat="@drawable/p"
+        android:focusable="true"
         tools:ignore="SpeakableTextPresentCheck" />
 
-    <ImageView
+    <Button
         android:id="@+id/scissor_select2"
-        android:layout_width="63dp"
-        android:layout_height="83dp"
+        android:layout_width="52dp"
+        android:layout_height="57dp"
         android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginEnd="4dp"
-        android:layout_marginBottom="420dp"
+        android:layout_marginEnd="9dp"
+        android:layout_marginBottom="531dp"
+        android:background="@drawable/csissors"
         android:clickable="true"
-        app:srcCompat="@drawable/csissors"
+        android:focusable="true"
         tools:ignore="SpeakableTextPresentCheck" />
 
 
